; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_logor_expr.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_logor_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OP_LOGOR = common dso_local global i32 0, align 4
@type_int = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @read_logor_expr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_logor_expr() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* (...) @read_logand_expr()
  store i32* %2, i32** %1, align 8
  br label %3

3:                                                ; preds = %7, %0
  %4 = load i32, i32* @OP_LOGOR, align 4
  %5 = call i64 @next_token(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %3
  %8 = load i32, i32* @type_int, align 4
  %9 = load i32, i32* @OP_LOGOR, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = call i32* (...) @read_logand_expr()
  %12 = call i32* @ast_binop(i32 %8, i32 %9, i32* %10, i32* %11)
  store i32* %12, i32** %1, align 8
  br label %3

13:                                               ; preds = %3
  %14 = load i32*, i32** %1, align 8
  ret i32* %14
}

declare dso_local i32* @read_logand_expr(...) #1

declare dso_local i64 @next_token(i32) #1

declare dso_local i32* @ast_binop(i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
